# solana-pipkit

./: CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.local.json
examples/: account_graph.rs  address_verification.rs  full_safety_demo.rs  jupiter_swap.rs  transaction_batch.rs
solana-rust-toolkit/: README.md
solana-rust-toolkit/examples/: rent_cleaner.rs  token_burn.rs
solana-rust-toolkit/src/: account_utils.rs  error.rs  lib.rs  rent.rs  token_utils.rs
src/: account_graph.rs  anchor_helpers.rs  error.rs  jupiter.rs  lib.rs  pda.rs  rent_cleaner.rs  token_utils.rs  transaction.rs
src/safety/: address_verify.rs  amount_validation.rs  mod.rs  validator.rs
