[package]
name = "solana-pipkit"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Noah Michel <noah@arktechnologies.ai>"]
description = "Pragmatic Rust utilities for Solana development - PDA helpers, transaction batching, rent recovery, account graphs, and more"
license = "MIT"
repository = "https://github.com/piccassol/solana-pipkit"
documentation = "https://docs.rs/solana-pipkit"
readme = "README.md"
keywords = ["solana", "blockchain", "web3", "crypto", "anchor"]
categories = ["cryptography::cryptocurrencies", "development-tools"]
exclude = [".github/*", "tests/*", ".gitignore"]

[lib]
path = "src/lib.rs"

[[example]]
name = "rent_cleaner"
path = "examples/rent_cleaner.rs"

[[example]]
name = "token_burn"
path = "examples/token_burn.rs"

[[example]]
name = "jupiter_swap"
path = "examples/jupiter_swap.rs"
required-features = ["jupiter"]

[[example]]
name = "transaction_batch"
path = "examples/transaction_batch.rs"

[[example]]
name = "account_graph"
path = "examples/account_graph.rs"

[[example]]
name = "address_verification"
path = "examples/address_verification.rs"

[[example]]
name = "full_safety_demo"
path = "examples/full_safety_demo.rs"

[dependencies]
# Solana core
solana-sdk = "1.18"
solana-client = "1.18"
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"

# SPL programs
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Anchor (optional)
anchor-lang = { version = "0.29", optional = true }
anchor-spl = { version = "0.29", optional = true }

# Metaplex
mpl-token-metadata = "4.1"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Serialization
borsh = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
bs58 = "0.5"

# Jupiter integration dependencies (optional)
reqwest = { version = "0.11", features = ["json"], optional = true }
base64 = { version = "0.21", optional = true }
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
anchor = ["anchor-lang", "anchor-spl"]
jupiter = ["reqwest", "base64", "lazy_static"]
all = ["anchor", "jupiter"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
